k8s/base/workloads/family/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: family-service
  labels:
    app: family-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: family-service
  template:
    metadata:
      labels:
        app: family-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: family-service
      containers:
      - name: family-service
        image: family-service:latest
        ports:
        - containerPort: 50053
          name: grpc
          protocol: TCP
